# python-course

./: .gitignore  README.md  docker-compose.test.yml  docker-compose.yml
hw1/: task.py
src/: .coveragerc  Dockerfile  db.sqlite3  entrypoint.sh  pyproject.toml  pytest.ini
src/authentication/: forms.py  models.py  tasks.py  urls.py  views.py
src/authentication/forms/: __init__.py  forgot.py  reset.py  sign_in.py  sign_up.py
src/authentication/migrations/: 0001_initial.py  0002_alter_user_confirmation_code.py  0003_alter_user_confirmation_code.py  0004_alter_user_confirmation_code.py  0005_alter_user_confirmation_code.py  0006_alter_user_confirmation_code.py
src/authentication/views/: __init__.py  confirm.py  forgot.py  reset.py  sign_in.py  sign_out.py  sign_up.py
src/core/: celery.py  settings.py  urls.py
src/core/tests/: testconf.py  user_factory.py
src/files/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
src/files/migrations/: 0001_initial.py  0002_attachment_file_exist.py
src/files/views/: __init__.py  create.py  delete.py  detail.py  download.py  list.py
src/links/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
src/links/migrations/: 0001_initial.py  0002_alter_link_short_link.py  0002_link_permanent.py  0003_alter_link_views.py
src/links/views/: __init__.py  create.py  delete.py  detail.py  list.py  redirect.py
src/static/: main.css
src/stats/: admin.py  models.py  utils.py
src/stats/migrations/: 0001_initial.py
src/templates/: 404.html  base.html  link_list.html  login.html  mail.html  registration.html
(+59 files in other folders)
